--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloud-init (24.2-0ubuntu1~22.04.1) UNRELEASED; urgency=medium
+cloud-init (24.2-0ubuntu1~22.04.1) jammy; urgency=medium
 
   * d/apport-general-hook.py: Move apport hook to main branch
   * d/cloud-init.maintscript: remove /etc/cloud/clean.d/README
@@ -25,7 +25,7 @@ cloud-init (24.2-0ubuntu1~22.04.1) UNRELEASED; urgency=medium
     https://raw.githubusercontent.com/canonical/cloud-init/24.2/ChangeLog
   * drop all d/p/cpick-* files as they are included in upstream snapshot
 
- -- Chad Smith <chad.smith@canonical.com>  Wed, 03 Jul 2024 06:07:05 -0600
+ -- Chad Smith <chad.smith@canonical.com>  Wed, 03 Jul 2024 06:07:15 -0600
 
 cloud-init (24.1.3-0ubuntu1~22.04.6) jammy; urgency=medium
 
